--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.2.0",
     "lodash": "^4.17.21",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "redis": "^4.5.1"
   }
 }
